MDEV-6674: Slave crashes in Query_cache::insert upon connecting to master

Fixed by testing if thd is set or not.